--- a/templates/home/category.html.twig
+++ b/templates/home/category.html.twig
@@ -16,5 +16,9 @@
                 </a>
             {% endfor %}
         </div>
+
+        <div class="navigation d-flex justify-content-center py-3">
+            {{ knp_pagination_render(videos) }}
+        </div>
     </div>
 {% endblock %}
