--- a/templates/home/video.html.twig
+++ b/templates/home/video.html.twig
@@ -2,20 +2,16 @@
 
 {% block content %}
     <div class="container py-3">
-        <h1>{{ video.name }}</h1>
 
         <div class="row">
             <div class="col-12 col-lg-10">
                 <div class="embed-responsive embed-responsive-16by9">
                     <div id="player"></div>
                 </div>
+                <h3 id="page-title">{{ video.name }}</h3>
             </div>
             <div class="col-12 col-lg-2">
-                {% for category in categories %}
-                    <a href="{{ path('home_category', {'category': category.id}) }}">
-                        {{ category.name }}
-                    </a>
-                {% endfor %}
+                <div data-url="{{ path('api_video_random_category', {'category': video.category.id}) }}" id="get-random"></div>
             </div>
         </div>
 
@@ -28,6 +24,9 @@
     <script>
     var player;
     var playerStatus;
+    var getRandom = document.getElementById('get-random');
+    var pageTitle = document.getElementById('page-title');
+    var nextVideo = false;
 
     function onYouTubeIframeAPIReady() {
       player = new YT.Player('player', {
@@ -39,21 +38,62 @@
           'onStateChange': onPlayerStateChange
         }
       });
+
+      if (getRandom) {
+        loadNext();
+      }
+    }
+
+    function loadNext() {
+      fetch(getRandom.dataset.url)
+        .then(response => response.json())
+        .then(data => {
+          nextVideo = data.data;
+          setupNextVideo();
+        });
+    }
+
+    function loadNextVideo() {
+      if (!nextVideo) {
+        return;
+      }
+
+      pageTitle.textContent = nextVideo.title;
+      player.loadVideoById(nextVideo.video);
+      loadNext();
+    }
+
+    function setupNextVideo() {
+      const img = document.createElement('img');
+      img.src = `https://img.youtube.com/vi/${nextVideo.video}/hqdefault.jpg`;
+      img.className = 'img-fluid';
+      const strong = document.createElement('strong');
+      strong.textContent = `Next up: ${nextVideo.title}`;
+
+      getRandom.innerHTML = '';
+      getRandom.appendChild(img);
+      getRandom.appendChild(strong);
     }
 
     function onPlayerReady(event) {
       event.target.playVideo();
-      console.log(event.target);
+      // console.log(event.target);
     }
 
     function onPlayerStateChange(event) {
       playerStatus = event.data;
-      console.log(event.data);
+      if (playerStatus === YT.PlayerState.ENDED) {
+        loadNextVideo();
+      }
     }
 
+    getRandom.addEventListener('click', loadNextVideo);
     document.addEventListener('keydown', checkKey);
 
     function checkKey(event) {
+      if (event.code.toLowerCase() === 'keyf') {
+        player.f.requestFullscreen();
+      }
       if (event.code.toLowerCase() === 'space') {
         if (playerStatus === YT.PlayerState.PLAYING) {
           player.pauseVideo();
