--- a/templates/home/video.html.twig
+++ b/templates/home/video.html.twig
@@ -1,8 +1,14 @@
 {% extends "base.html.twig" %}
 
+{% block meta_og %}
+    <meta property="og:title" content="{{ video.name }}">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="{{ absolute_url(path('home_video', {'video': video.id})) }}">
+    <meta property="og:image" content="https://img.youtube.com/vi/{{ video.video }}/hqdefault.jpg">
+{% endblock %}
+
 {% block content %}
     <div class="container py-3">
-
         <div class="row">
             <div class="col-12 col-lg-10">
                 <div class="embed-responsive embed-responsive-16by9">
@@ -14,7 +20,6 @@
                 <div data-url="{{ path('api_video_random_category', {'category': video.category.id}) }}" id="get-random"></div>
             </div>
         </div>
-
     </div>
 {% endblock %}
 
