Updated icon, changed facebook login

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,7 +1,11 @@
 {% extends "@GlynnTemplate/base.html.twig" %}
 
+{% block page_title -%}
+    {{ 'site.meta.title' | trans }}
+{%- endblock %}
+
 {% block navbar_nav_class -%}
- navbar-dark bg-dark
+    navbar-dark bg-dark
 {%- endblock %}
 
 {% block navbar_brand -%}
