--- a/templates/home/video.html.twig
+++ b/templates/home/video.html.twig
@@ -1,5 +1,9 @@
 {% extends "base.html.twig" %}
 
+{% block page_title -%}
+    {{ video.name }} | {{ parent() }}
+{%- endblock %}
+
 {% block meta_og %}
     <meta property="og:title" content="{{ video.name }}">
     <meta property="og:type" content="website">
@@ -65,6 +69,9 @@
 
       pageTitle.textContent = nextVideo.title;
       player.loadVideoById(nextVideo.video);
+
+      window.history.pushState(nextVideo.id, nextVideo.title, nextVideo.url);
+
       loadNext();
     }
 
