--- a/assets/site/css/site.scss
+++ b/assets/site/css/site.scss
@@ -2,4 +2,6 @@
 @import '~bootstrap/scss/bootstrap';
 @import "~@fortawesome/fontawesome-free/scss/fontawesome";
 @import "~@fortawesome/fontawesome-free/scss/solid";
+@import "~@fortawesome/fontawesome-free/scss/brands";
+@import "~@fortawesome/fontawesome-free/scss/regular";
 @import '~ryoko-headers/scss/ryoko';
