--- a/assets/site/css/_variables.scss
+++ b/assets/site/css/_variables.scss
@@ -35,7 +35,8 @@ $body-color: #fefefe;
 
 $link-color: $success;
 
-// Forms
+$table-border-color: $gray-800;
+
 $input-bg: $gray-900;
 $input-color: $gray-200;
 $input-border-color: $gray-800;
