--- a/templates/admin/youtube_category/edit.html.twig
+++ b/templates/admin/youtube_category/edit.html.twig
@@ -2,6 +2,10 @@
 
 {% block title %}Edit Category{% endblock %}
 
+{% block content_title %}
+    Edit Category
+{% endblock %}
+
 {% block body %}
     <div class="container py-3">
         <div class="d-flex justify-content-between">
@@ -12,7 +16,6 @@
             {{ include('admin/youtube_category/_delete_form.html.twig') }}
         </div>
         <br>
-        <h1>Edit Category</h1>
 
         {{ include('admin/youtube_category/_form.html.twig', {'button_label': 'Update'}) }}
     </div>
