--- a/templates/admin/youtube_category/show.html.twig
+++ b/templates/admin/youtube_category/show.html.twig
@@ -4,6 +4,10 @@
     Category
 {% endblock %}
 
+{% block content_title %}
+    Category
+{% endblock %}
+
 {% block body %}
     <div class="container py-3">
         <div class="d-flex justify-content-between">
@@ -14,7 +18,6 @@
             {{ include('admin/youtube_category/_delete_form.html.twig') }}
         </div>
         <br>
-        <h1>Category</h1>
 
         <table class="table">
             <tbody>
