--- a/templates/admin/youtube_video/edit.html.twig
+++ b/templates/admin/youtube_video/edit.html.twig
@@ -4,6 +4,10 @@
     Edit Video
 {% endblock %}
 
+{% block content_title %}
+    Edit Video
+{% endblock %}
+
 {% block body %}
     <div class="container py-3">
         <div class="d-flex justify-content-between">
@@ -15,7 +19,6 @@
             {{ include('admin/youtube_video/_delete_form.html.twig') }}
         </div>
         <br>
-        <h1>Edit Video</h1>
 
         {{ include('admin/youtube_video/_form.html.twig', {'button_label': 'Update'}) }}
     </div>
