--- a/templates/admin/youtube_video/_form.html.twig
+++ b/templates/admin/youtube_video/_form.html.twig
@@ -13,6 +13,7 @@
         </button>
     </div>
     <div class="col-lg-3 col-12">
+        {{ form_row(form.public) }}
         {{ form_row(form.duration) }}
         {{ form_row(form.category) }}
         <button class="btn btn-primary">
