--- a/templates/admin/youtube_video/index.html.twig
+++ b/templates/admin/youtube_video/index.html.twig
@@ -41,7 +41,7 @@
             {{ knp_pagination_render(youtube_videos) }}
         </div>
         <div class="table-responsive">
-            <table class="table table-striped">
+            <table class="table table-striped align-middle">
                 <thead>
                 <tr>
                     <th></th>
