--- a/templates/admin/youtube_video/show.html.twig
+++ b/templates/admin/youtube_video/show.html.twig
@@ -23,7 +23,7 @@
             {{ include('admin/youtube_video/_delete_form.html.twig') }}
         </div>
 
-        <div class="embed-responsive embed-responsive-16by9">
+        <div class="ratio ratio-16x9">
             <div id="player"></div>
         </div>
 
