--- a/assets/site/css/_variables.scss
+++ b/assets/site/css/_variables.scss
@@ -30,30 +30,30 @@ $danger: $red;
 $light: $gray-500;
 $dark: $gray-800;
 
-$body-bg: #020202;
-$body-color: #fefefe;
-
-$link-color: $success;
-
-$table-border-color: $gray-800;
-
-$input-bg: $gray-900;
-$input-color: $gray-200;
-$input-border-color: $gray-800;
-$input-btn-border-width: 2px;
-$input-focus-bg: $gray-800;
-
-$card-cap-bg: $gray-700;
-$card-bg: $gray-800;
-
-$pagination-color: $gray-200;
-$pagination-bg: $gray-900;
-$pagination-border-color: $gray-800;
-$pagination-disabled-bg: $black;
-$pagination-disabled-border-color: $gray-900;
-$pagination-hover-bg: $gray-700;
-$pagination-hover-color: $gray-300;
-$pagination-hover-border-color: $gray-700;
-
-
-
+//$body-bg: #020202;
+//$body-color: #fefefe;
+//
+//$link-color: $success;
+//
+//$table-border-color: $gray-800;
+//
+//$input-bg: $gray-900;
+//$input-color: $gray-200;
+//$input-border-color: $gray-800;
+//$input-btn-border-width: 2px;
+//$input-focus-bg: $gray-800;
+//
+//$card-cap-bg: $gray-700;
+//$card-bg: $gray-800;
+//
+//$pagination-color: $gray-200;
+//$pagination-bg: $gray-900;
+//$pagination-border-color: $gray-800;
+//$pagination-disabled-bg: $black;
+//$pagination-disabled-border-color: $gray-900;
+//$pagination-hover-bg: $gray-700;
+//$pagination-hover-color: $gray-300;
+//$pagination-hover-border-color: $gray-700;
+//
+//
+//
