--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -2,8 +2,8 @@
 
 {% block header_user_menu %}
     {% if app.user %}
-        <div class="dropdown float-right">
-            <a data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="btn text-muted">
+        <div class="dropdown float-end">
+            <a data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="btn text-muted">
                 <i class="fa fa-chevron-down"></i>
             </a>
             <div class="dropdown-menu dropdown-menu-right">
@@ -13,17 +13,19 @@
             </div>
         </div>
         <div class="sidebar-user">
-            <div class="media">
-                <div class="media-left">
+            <div class="d-flex gap-2">
+                <div>
                     <img src="{{ gravatar(app.user.email) }}"
                          class="rounded img-fluid sidebar-user-img pr-3"
                          alt="{{ 'admin.nav.profile_image' | trans }}">
                 </div>
-                <div class="media-body">
+                <div>
                     <strong class="media-heading">
                         {{ app.user.username }}
                     </strong>
-                    {{ app.user.email }}
+                    <div>
+                        {{ app.user.email }}
+                    </div>
                 </div>
             </div>
         </div>
