--- a/templates/admin/youtube_video/_form.html.twig
+++ b/templates/admin/youtube_video/_form.html.twig
@@ -3,7 +3,7 @@
     <div class="col-lg-9 col-12">
         {{ form_row(form.name) }}
         {{ form_row(form.video) }}
-        <div class="embed-responsive embed-responsive-16by9">
+        <div class="ratio ratio-16x9">
             <div id="player"></div>
         </div>
         <br>
@@ -67,6 +67,7 @@ function updateValue(e) {
 
   loadVideoId(e.target);
   player.cueVideoById(videoId);
+  console.log(player);
 }
 
 function onYouTubeIframeAPIReady() {
@@ -89,8 +90,8 @@ function onPlayerReady(event) {
 }
 
 function onPlayerStateChange(event) {
-  console.log(event.target);
   const data = event.target.getVideoData();
+  console.log(data);
   if (data.title) {
     videoName.value = data.title.toString();
   }
