Setup basic login link

--- a/templates/admin.html.twig
+++ b/templates/admin.html.twig
@@ -15,7 +15,7 @@
         <div class="sidebar-user">
             <div class="d-flex gap-2">
                 <div>
-                    <img src="{{ gravatar(app.user.email) }}"
+                    <img src="{{ app.user.avatar }}"
                          class="rounded img-fluid sidebar-user-img pr-3"
                          alt="{{ 'admin.nav.profile_image' | trans }}">
                 </div>
