--- a/templates/admin/user/show.html.twig
+++ b/templates/admin/user/show.html.twig
@@ -13,7 +13,7 @@
         <br>
         <div class="row">
             <div class="col-sm-2 col-xs-12">
-                <img src="{{ gravatar(user.email, 200) }}" alt="Profile image" class="img-circle img-fluid ">
+                <img src="{{ user.avatar }}" alt="Profile image" class="img-circle img-fluid ">
             </div>
             <div class="col-sm-10 col-xs-12">
                 <h4>
