--- a/templates/home/category.html.twig
+++ b/templates/home/category.html.twig
@@ -15,7 +15,9 @@
             {% for video in videos %}
                 <a href="{{ path('home_video', {'video': video.id}) }}" class="col-12 col-lg-3 py-2">
                     <div class="card h-100">
-                        <img src="https://img.youtube.com/vi/{{ video.video }}/hqdefault.jpg" alt="" class="card-img-top">
+                        <div class="ratio ratio-16x9">
+                            <img src="https://img.youtube.com/vi/{{ video.video }}/hqdefault.jpg" alt="" class="card-img-top">
+                        </div>
                         <div class="card-body">
                             <h6 class="card-title">{{ video.name }}</h6>
                         </div>
