--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -10,7 +10,7 @@
 {% block content %}
     <div class="container py-3">
         <div class="text-center">
-            <img src="{{ asset('img/logo.jpg') }}" alt="">
+            <img src="{{ asset('img/logo.jpg') }}" alt="" class="img-fluid">
         </div>
     </div>
     <div class="container py-3">
