--- a/templates/home/search.html.twig
+++ b/templates/home/search.html.twig
@@ -27,7 +27,7 @@
         {{ form_end(searchForm) }}
 
         <div class="table-responsive">
-            <table class="table table-striped">
+            <table class="table table-striped align-middle">
                 <tbody>
                 {% for video in videos %}
                     <tr>
