--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,28 +4,17 @@
 
 {% block body %}
 
-    <div class="container py-3">
-        <div class="row justify-content-around">
-            <div class="col-lg-4">
-                <h1>Login</h1>
-                <a href="{{ path('connect_facebook_start') }}" class="btn btn-outline-primary btn-block">
-                    <i class="fab fa-fw fa-facebook-f"></i>
-                    Facebook
-                </a>
-            </div>
-        </div>
-    </div>
-        <div class="row justify-content-md-center py-3">
+    <div class="row justify-content-md-center py-3">
         <div class="col-md-6">
             <form method="post">
-                <div class="card bg-light">
-                    <div class="card-header bg-primary text-white">
-                        <i class="fa fa-user"></i>
+                <div class="card">
+                    <div class="card-header">
+                        <i class="fa fa-fw fa-user"></i>
                         {{ 'site.header.login' | trans }}
                     </div>
                     <div class="card-body">
                         {% if error %}
-                            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                            <div class="alert alert-danger">{{ error }}</div>
                         {% endif %}
                         {% if app.user %}
                             <div class="mb-3">
@@ -33,22 +22,12 @@
                                 <a href="{{ path('app_logout') }}">{{ 'site.button.logout' | trans }}</a>
                             </div>
                         {% endif %}
-                        <div class="form-group">
-                            <label for="input-email">{{ 'site.label.email' | trans }}Email</label>
-                            <input type="email" value="{{ last_username }}" name="email" id="input-email" class="form-control" required autofocus>
-                        </div>
-                        <div class="form-group">
-                            <label for="input=password">{{ 'site.label.password' | trans }}</label>
-                            <input type="password" name="password" id="input=password" class="form-control" required>
-                        </div>
-                        <div class="form-group">
-                            <input type="checkbox" name="_remember_me" id="remember_me">
-                            <label for="remember_me">
-                                {{ 'site.label.remember_me' | trans }}
-                            </label>
+                        <div class="mb-3">
+                            <label for="input-email">{{ 'site.label.email' | trans }}</label>
+                            <input type="email" value="{{ email }}" name="email" id="input-email" class="form-control" required autofocus>
                         </div>
                         <button class="btn btn-primary" type="submit">
-                            <i class="fa fa-sign-in-alt"></i>
+                            <i class="fa fa-fw fa-magic-wand-sparkles"></i>
                             {{ 'site.button.login' | trans }}
                         </button>
                         <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
