--- a/templates/home/video.html.twig
+++ b/templates/home/video.html.twig
@@ -15,7 +15,7 @@
     <div class="container py-3">
         <div class="row">
             <div class="col-12 col-lg-10">
-                <div class="embed-responsive embed-responsive-16by9">
+                <div class="ratio ratio-16x9">
                     <div id="player" data-video="{{ video.video }}"></div>
                 </div>
                 <h3 id="page-title">
